-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0 Beta1
-
None
-
6419556a2bebe81244198e84696aa6eeebdf463d
When building QtQuick applications that use websockets on iOS you will get the following warning:
Project ERROR: Plugin declarative_qmlwebsockets is missing a classname entry, please add one to the qmldir file
This is a problem because the iOS build needs this information for including the correct the static plugin for declarative_qmlwebsockets.