Add missing classname for module in qmldir.

Task-number: QTBUG-38854
Change-Id: Iad6d49309010fd9ccb7e8fcb2c58962d811f018f
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>